--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
   "dependencies": {
     "@hyperswarm/replicator": "github:lukeburns/replicator",
     "bs32": "^0.1.6",
+    "dedent": "^0.7.0",
     "hypertrie": "^5.1.2",
     "is-options": "^1.0.2"
   },
   "peerDependencies": {
     "bns": "^0.15.0"
+  },
+  "devDependencies": {
+    "random-access-memory": "^4.0.0"
   }
 }
